--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint-config-rallycoding": "^3.2.0",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-fetch-blob": "^0.10.2",
